fixed horizontal scrolling

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -145,7 +145,8 @@ legend {
 }
 
 .wrapper {
-  overflow-x: hidden;
+  overflow: hidden auto;
+  position: relative;
 }
 
 /* base icons */
